Fix to ellipsis of contract header ID overflow (part of US106354 and 106500)
git-tfs-id: [https://tfs-fm-04.devtools.intel.com/tfs/DefaultCollection_TFS04]$/RDMS/MyDeals/MyDeals_Release/UI/main;C1481380

--- a/Intel.MyDeals/css/_contractManager.css
+++ b/Intel.MyDeals/css/_contractManager.css
@@ -609,18 +609,10 @@
 		-webkit-transition: 0.5s;
 		white-space: nowrap;
 		overflow: hidden;
+		text-overflow: ellipsis;
 		max-width: 600px;	
 		min-height: 24px;
 		height: 1.1em;
-	}
-	.fntLg-dots:after {
-		background-color: #ffffff;
-		font-weight: bold;
-		right: 0px;
-		position:absolute;
-		padding:1px 8px;
-		font-size: 16px;
-		content: "...";
 	}
 	.fntLg-toggle:hover {
 		max-width: 91.66667%;
